--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,5 @@
-absl-py==1.4.0
-appdirs==1.4.4
-asgiref==3.8.1
-astunparse==1.6.3
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-blinker==1.8.2
-bs4==0.0.2
-cachetools==5.3.1
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.7
-colorama==0.4.6
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
 Django==4.2.5
-docx==0.2.4
-et_xmlfile==2.0.0
-executing==1.2.0
-fastjsonschema==2.17.1
-filelock==3.12.0
-Flask==3.0.3
-flatbuffers==23.5.26
-fqdn==1.5.1
-gast==0.4.0
-google-auth==2.19.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grep==0.3.2
-grpcio==1.54.2
-gunicorn==23.0.0
-h5py==3.8.0
-idna==3.4
-ipython-genutils==0.2.0
-itsdangerous==2.2.0
-jax==0.4.11
-Jinja2==3.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter_core==5.3.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-keras==2.12.0
-libclang==16.0.0
-lxml==4.9.3
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mistune==2.0.5
-ml-dtypes==0.1.0
-mpmath==1.3.0
-nest-asyncio==1.5.6
-networkx==3.1
-numpy==1.23.5
-oauthlib==3.2.2
+django-admin-list-filter-dropdown==1.0.3
+django-crispy-forms==2.0
+pandas
 openpyxl==3.1.5
-opt-einsum==3.3.0
-overrides==7.3.1
-packaging==23.1
-pandas==2.2.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.5.1
-prometheus-client==0.17.0
-prompt-toolkit==3.0.38
-protobuf==4.23.2
-psutil==5.9.5
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-Pygments==2.15.1
-pyodbc==4.0.39
-pyrsistent==0.19.3
-pyshark==0.6
-python-dateutil==2.8.2
-python-docx==1.1.2
-python-json-logger==2.0.7
-pytz==2025.2
-pywin32==306
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==25.1.0
-QtPy==2.3.1
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.9
-scapy==2.5.0
-scipy==1.10.1
-Send2Trash==1.8.2
-six==1.16.0
-sklearn==0.0.post5
-sniffio==1.3.0
-soupsieve==2.4.1
-sqlparse==0.5.3
-sympy==1.12
-tensorboard==2.12.3
-tensorboard-data-server==0.7.0
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-terminado==0.17.1
-tinycss2==1.2.1
-torch==2.0.1
-torchvision==0.15.2
-tornado==6.3.2
-traitlets==5.9.0
-typing_extensions==4.14.0
-tzdata==2025.2
-uri-template==1.2.0
-urllib3==1.26.16
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.5.2
-Werkzeug==3.0.3
-widgetsnbextension==4.0.7
-wrapt==1.14.1
