--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==4.2.5
-django-admin-list-filter-dropdown==1.0.3
+gunicorn>=20.1.0
+whitenoise>=6.0.0
+Django>=4.2
+django-admin-listfilter-dropdown==1.0.3
 django-crispy-forms==2.0
-pandas
 openpyxl==3.1.5
+pandas
